--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Styles Conference</title>
+  <title>Crypto Coffee</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
 </head>
@@ -10,27 +10,25 @@
 
   <header class="primary-header container group">
     <h1 class="logo">
-      <a href="index.html">Styles <br> Conference</a>
+      <a href="index.html">Crypto <br> Coffee</a>
     </h1>
 	
-    <h3 class="tagline">24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
+    <h3 class="tagline">Городок, Хмельницкая область, 32000</h3>
     
 	<nav class="nav primary-nav">
   <ul>
-    <li><a href="index.html">Главная</a></li><!--
-    --><li><a href="speakers.html">Спикеры</a></li><!--
-    --><li><a href="schedule.html">Расписание</a></li><!--
-    --><li><a href="venue.html">Место проведения</a></li><!--
-    --><li><a href="register.html">Регистрация</a></li>
+    <li><a href="index.html">Головна</a></li><!--
+    --><li><a href="speakers.html">Власники</a></li><!--
+    --><li><a href="schedule.html">Меню</a></li><!--
+    --><li><a href="venue.html">Місце розташування</a></li><!--
+    --><li><a href="register.html">Онлайн замовлення</a></li>
   </ul>
   </header>
   
   <section class="hero container">
-    <h2>Посвящается ремеслу создания сайтов</h2>
-    <p>Каждый год самые яркие веб-дизайнеры и фронтенд-разработчики собираются в Чикаго, 
-       чтобы обсудить новейшие технологии. Присоединяйся к нам этим августом!</p>
-	   
-    <a class="btn btn-alt" href="register.html">Зарегистрируйтесь сейчас</a>
+    <h2>Найкраще кафе в м.Городок</h2>
+    <p>Якщо ти хомяк в криптовалюті, приходь в наше каве і спробуй нашу фірмову каву зі смаком ліквідації</p>
+    <a class="btn btn-alt" href="register.html">Онлайн замовлення</a>
   </section>
   
     <section class="row">
@@ -39,47 +37,47 @@
         <!-- Спикеры -->
 
         <section class="teaser col-1-3">
-          <h5>Спикеры</h5>
+          <h5>Власники</h5>
  	      <a href="speakers.html">
           <img src="assets/images/home/speakers.jpg" alt="Професійні спікери">
-            <h3>Спикеры мирового класса</h3>
+            <h3>Власники світового класу</h3>
 	      </a>
-          <p>К нам приедут более двадцати фантастических спикеров со всего мира, чтобы поделиться своими историями.</p>
+          <p>Хлопці вже не перший рік в кавовому бізнесі, і повністю знають свою роботу</p>
         </section><!--
 
         Расписание
 
         --><section class="teaser col-1-3">
-          <h5>Расписание</h5>
+          <h5>Меню</h5>
           <a href="schedule.html">
             <img src="assets/images/home/schedule.jpg" alt="Schedule">
-            <h3>Три вдохновляющих дня</h3>
+            <h3>Кава на будь який смак</h3>
 	      </a>
-          <p>Наслаждайтесь тремя вдохновляющими и насыщенными событиями днями переговоров, встреч и всем хорошим вокруг.</p>
+          <p>Щоразу, коли ви насолоджуєтеся нашою кавою, ви робите чудовий вибір.</p>
         </section><!--
 
         Место проведения
 
         --><section class="teaser col-1-3">
-          <h5>Место проведения</h5>
+          <h5>Місце розташування</h5>
           <a href="venue.html">
             <img src="assets/images/home/venue.jpg" alt="Venue">
-            <h3>Театр Чикаго</h3>
+            <h3>вул.Індустріальна</h3>
 	      </a>
-          <p>Театр Чикаго в самом центре города обеспечит красивое место проведения конференции.</p>
+          <p>Кафе розташоване в самому центрі молочного, що забезпечить гарне місце для смакування нашої кави</p>
         </section>
       </div>
     </section> 
   
   <footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
+    <small>&copy; Crypto Caffee</small>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">Главная</a></li><!--
-        --><li><a href="speakers.html">Спикеры</a></li><!--
-        --><li><a href="schedule.html">Расписание</a></li><!--
-        --><li><a href="venue.html">Место проведения</a></li><!--
-        --><li><a href="register.html">Регистрация</a></li> 
+        <li><a href="index.html">Головна</a></li><!--
+        --><li><a href="speakers.html">Власники</a></li><!--
+        --><li><a href="schedule.html">Меню</a></li><!--
+        --><li><a href="venue.html">Місце розташування</a></li><!--
+        --><li><a href="register.html">Онлайн замовлення</a></li>
       </ul>
     </nav>
   </footer>
