--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Styles Conference</title>
+  <title>Crypto Coffee</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
 </head>
@@ -23,7 +23,6 @@
         --><li><a href="venue.html">Место проведения</a></li><!--
         --><li><a href="register.html">Регистрация</a></li>
       </ul>
-	</nav>
   </header>
 
   <section class="row-alt">
