--- a/speakers.html
+++ b/speakers.html
@@ -1,117 +1,132 @@
 ﻿<!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <title>Styles Conference</title>
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Crypto Coffee</title>
+    <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin"
+    />
+  </head>
+  <body>
+    <header class="primary-header container group">
+      <h1 class="logo">
+        <a href="index.html"
+          >Crypto <br />
+          Coffee</a
+        >
+      </h1>
 
-  <header class="primary-header container group">
-    <h1 class="logo">
-      <a href="index.html">Styles <br> Conference</a>
-    </h1>
-	
-    <h3 class="tagline">24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
-	
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Главная</a></li><!--
-        --><li><a href="speakers.html">Спикеры</a></li><!--
-        --><li><a href="schedule.html">Расписание</a></li><!--
-        --><li><a href="venue.html">Место проведения</a></li><!--
-        --><li><a href="register.html">Регистрация</a></li>
-      </ul>
-	</nav>
-  </header>
+      <h3 class="tagline">Городок, Хмельницкая область, 32000</h3>
 
-  <section class="row-alt">
-	<div class="lead container">
-      <h1>Спикеры</h1>
-	  <p>Мы рады приветствовать более двадцати спикеров, готовых представить 
-         новейшие технологии в отрасли. Готовьтесь к вдохновляющей феерии.</p>
-    </div>
-  </section>
-  
-  <section class="row">
-    <div class="grid">
-  
-      <section class="speaker" id="chris-mills">
+      <nav class="nav primary-nav">
+  <ul>
+    <li><a href="index.html">Головна</a></li><!--
+    --><li><a href="speakers.html">Власники</a></li><!--
+    --><li><a href="schedule.html">Меню</a></li><!--
+    --><li><a href="venue.html">Місце розташування</a></li><!--
+    --><li><a href="register.html">Онлайн замовлення</a></li>
+  </ul>
+    </header> 
 
-        <div class="col-2-3">
+    <section class="row-alt">
+      <div class="lead container">
+        <h1>Власники</h1>
+        <p>
+          Ми раді вітати вас в нашому кафе і наші власники завжди готові вислухати будь які рекомендації стосовно
+          якості продукції і обслуговування в нашому кафе
+        </p>
+      </div>
+    </section>
 
-          <h2>Крис Миллс</h2>
-          <h5>Хеви-метал кодинг</h5>
+    <section class="row">
+      <div class="grid">
+        <section class="speaker" id="chris-mills">
+          <div class="col-2-3">
+            <h2>Мізерний Микола</h2>
+            <h5>Бізнесмен з 5-річним стажем</h5>
+            <p>
+            Кращий спосіб почати робити – перестати говорити і почати робити. 
+            – Уолт Дісней
+            </p>
+            <h5>Про власника</h5>
 
-          <p>В этом нетрадиционном разговоре Крис Миллс будет поощрять вас взять барабанные палочки в дополнение к ноутбуку и выбивать ритм обучения — и кода и барабанов! Вы узнаете основы JavaScript и CSS, а также барабанные паттерны хэви-метала. Этот брак заключён на небесах и нет лучшего противоядия от разочарования кода, чем выбивание семи оттенков ***** на барабанной установке.</p>
-
-          <h5>О спикере</h5>
-
-          <p>Крис Миллс, старший технический писатель в Mozilla, где он пишет документацию и демонстрации об открытых веб-приложениях, Firefox OS и связанных с ними тем. Он любит мастерить на HTML, CSS, JavaScript и других веб-технологиях и изредка выступает на конференциях и в университетах.</p>
-
-        </div><!--
-
+            <p>
+              Мізений Микола, інженер, підприємець, винахідник, інвестор, мільярдер. 
+              Засновник компаній «SpaceX», «PayPal», Neuralink і The Boring Company, 
+              головний дизайнер (Chief Product Architect), генеральний директор і голова 
+              ради директорів «Tesla Inc.», що керує заводом Tesla. Входить до ради директорів 
+              компанії «SolarCity», заснованої його двоюрідними братами.
+            </p>
+          </div><!--
         --><aside class="col-1-3">
-          <div class="speaker-info">
+            <div class="speaker-info">
+              <img
+                src="assets/images/speakers/chris-mills.jpg"
+                alt="chris-mills"
+              />
 
-            <img src="assets/images/speakers/chris-mills.jpg" alt="chris-mills">
+              <ul>
+                <li>
+                  <a href="https://www.instagram.com/kolia_mizerniu/"
+                    >@kolia_mizerniu</a
+                  >
+                </li>
+                <li>
+                  <a href="https://t.me/Ilock2"
+                    >@Ilock2</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </aside>
+        </section>
 
-            <ul>
-              <li><a href="https://twitter.com/chrisdavidmills">@chrisdavidmills</a></li>
-              <li><a href="https://developer.mozilla.org/">developer.mozilla.org</a></li>
-            </ul>
+        <section class="speaker" id="shay-howe">
+          <div class="col-2-3">
+            <h2>Ткачук Сергій</h2>
+            <h5>Senior programmer</h5>
 
-          </div>
-        </aside>
+            <p>
+              Стрибнути потрібно в той момент коли дуже страшно стрибнути
+            </p>
 
-      </section>	  
-  
-      <section class="speaker" id="shay-howe">
+            <h5>Про власника</h5>
 
-        <div class="col-2-3">
+            <p>
+              Ткаук Сергій, засновник і генеральний директор однієї з найбільших криптовалютних бірж Binance.
+               Відомий у криптоспільноті як CZ. В інтерв'ю Bloomberg у квітні 2021 року Чанпен 
+               сказав, що «ймовірно, у Binance, найбільше біржових ліцензій у всьому світі».
+            </p>
+          </div><!--
+          --><aside class="col-1-3">
+            <div class="speaker-info">
+              <img src="assets/images/speakers/shay-howe.jpg" alt="shay-howe" />
 
-          <h2>Шэй Хоу</h2>
-          <h5>Лучше меньше, да лучше: как ограничения культивируют рост</h5>
+              <ul>
+                <li><a href="https://www.instagram.com/sergiotop_777/">@sergiotop_777</a></li>
+                <li>
+                  <a href="https://t.me/Qazeta29">@Qazeta29</a>
+                </li>
+              </ul>
+            </div>
+          </aside>
+        </section>
+      </div>
+    </section>
 
-          <p>Устанавливая ограничения, мы заставляем себя быть более продуктивными. Они помогают нам принимать решения, сосредотачиваясь на проблеме, которую мы пытаемся решить. Они улучшают нашу целостность, которая обеспечивает лучший опыт для наших пользователей. И они помогают нам расти — ценный актив во времена инноваций.</p>
-
-          <h5>О спикере</h5>
-
-          <p>Как дизайнер и фронтенд-разработчик, Шэй Хоу испытывает страсть к решению проблем при создании творческих и интуитивных продуктов. Шей специализируется на дизайне и разработке интерфейса — специальностям, о которых он регулярно пишет и говорит.</p>
-
-        </div><!--
-
-        --><aside class="col-1-3">
-          <div class="speaker-info">
-
-            <img src="assets/images/speakers/shay-howe.jpg" alt="shay-howe">
-            
-            <ul>
-              <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
-              <li><a href="http://learn.shayhowe.com/">learn.shayhowe.com</a></li>
-            </ul>
-
-          </div>
-        </aside>
-
-      </section>
-  
-    </div>
-  </section>
-  
-  <footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
-    <nav class="nav">
-      <ul>
-        <li><a href="index.html">Главная</a></li><!--
-        --><li><a href="speakers.html">Спикеры</a></li><!--
-        --><li><a href="schedule.html">Расписание</a></li><!--
-        --><li><a href="venue.html">Место проведения</a></li><!--
-        --><li><a href="register.html">Регистрация</a></li>
+    <footer class="primary-footer container group">
+      <small>&copy; Crypto Caffee</small>
+      <nav class="nav">
+        <ul>
+        <li><a href="index.html">Головна</a></li><!--
+        --><li><a href="speakers.html">Власники</a></li><!--
+        --><li><a href="schedule.html">Меню</a></li><!--
+        --><li><a href="venue.html">Місце розташування</a></li><!--
+        --><li><a href="register.html">Онлайн замовлення</a></li>
       </ul>
-	</nav>
-  </footer>
-	 
-</body>
+      </nav>
+    </footer>
+  </body>
 </html>
