--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     --><li><a href="speakers.html">Власники</a></li><!--
     --><li><a href="schedule.html">Меню</a></li><!--
     --><li><a href="venue.html">Місце розташування</a></li><!--
-    --><li><a href="register.html">Онлайн замовлення</a></li>
+    --><li><a href="register.html">Відгуки</a></li>
   </ul>
   </header>
   
   <section class="hero container">
     <h2>Найкраще кафе в м.Городок</h2>
     <p>Якщо ти хомяк в криптовалюті, приходь в наше каве і спробуй нашу фірмову каву зі смаком ліквідації</p>
-    <a class="btn btn-alt" href="register.html">Онлайн замовлення</a>
+    <a class="btn btn-alt" href="schedule.html">Меню</a>
   </section>
   
     <section class="row">
@@ -77,7 +77,7 @@
         --><li><a href="speakers.html">Власники</a></li><!--
         --><li><a href="schedule.html">Меню</a></li><!--
         --><li><a href="venue.html">Місце розташування</a></li><!--
-        --><li><a href="register.html">Онлайн замовлення</a></li>
+        --><li><a href="register.html">Відгуки</a></li>
       </ul>
     </nav>
   </footer>
