--- a/register.html
+++ b/register.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Styles Conference</title>
+  <title>Crypto Coffee</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
 </head>
@@ -10,28 +10,25 @@
 
   <header class="primary-header container group">
     <h1 class="logo">
-      <a href="index.html">Styles <br> Conference</a>
+      <a href="index.html">Crypto <br> Coffee</a>
     </h1>
 	
-    <h3 class="tagline">24&ndash;26 августа &mdash; Чикаго, штат Иллинойс</h3>
+    <h3 class="tagline">Городок, Хмельницкая область, 32000</h3>
 	
     <nav class="nav primary-nav">
       <ul>
-        <li><a href="index.html">Главная</a></li><!--
-        --><li><a href="speakers.html">Спикеры</a></li><!--
-        --><li><a href="schedule.html">Расписание</a></li><!--
-        --><li><a href="venue.html">Место проведения</a></li><!--
-        --><li><a href="register.html">Регистрация</a></li>
-      </ul>
-	</nav>
+    <li><a href="index.html">Головна</a></li><!--
+    --><li><a href="speakers.html">Власники</a></li><!--
+    --><li><a href="schedule.html">Меню</a></li><!--
+    --><li><a href="venue.html">Місце розташування</a></li><!--
+    --><li><a href="register.html">Відгуки</a></li>
+  </ul>
   </header>
 
   <section class="row-alt">
 	<div class="lead container">
-      <h1>Регистрация</h1>
-	  <p>Каждый год мы стремимся невероятно провести время и в этом году мы 
-	     хотели бы чтобы вы присоединились к нам. Вход на конференцию стоит 
-		 всего лишь 99$ и это одна из лучших ценностей, которую вы найдёте.</p>
+      <h1>Відгуки</h1>
+	  <p>Ми з повагою ставимось до наших клієнтів, тому будемо дуже вдячні за зворотній зв'язок</p>
 	</div>
   </section>
   
@@ -39,42 +36,25 @@
     <div class="grid">
 
       <section class="col-2-3">
+        <h2>Злиште коментар щодо нашого сервісу
+        </h2>
+      </section> <!--
 
-        <h2>Закажи билет на конференцию</h2>
-        <h5>$99 за билет</h5>
-
-        <p>Приобретите билет на Styles Conference, используя форму справа. 
-           Можно приобрести сразу несколько билетов, так что не стесняйтесь взять 
-           с собой друга или двух. После того, как ваш заказ будет готов, мы 
-           свяжемся с вами и предоставим квитанцию за покупку. Скоро увидимся!</p>
- 
-        <h4>Зачем участвовать?</h4>
- 
-        <ul class="why-attend">
-          <li>Более двадцати спикеров мирового класса</li>
-          <li>Один полный день мастер-классов и два полных дня презентаций</li>
-          <li>Состоится в Театре Чикаго, исторической достопримечательности</li>
-          <li>Август в Чикаго просто поражает</li>
-        </ul>
-
-      </section><!--
-
-      --><form class="col-1-3" action="#" method="post">
+      --> <form class="col-1-3" action="#" method="post">
 
         <fieldset class="register-group">
  
           <label>
-            Имя
-            <input type="text" name="name" placeholder="Полное имя" required>
+            Ім'я
+            <input type="text" name="name" placeholder="Повне Ім'я" required>
           </label>
 
           <label>
             Email
-            <input type="email" name="email" placeholder="Адрес почты" required>
+            <input type="email" name="email" placeholder="Адреса пошти" required>
           </label>
-
           <label>
-            Число билетов
+            Оцінка сервісу
             <select name="quantity" required>
               <option value="1" selected>1</option>
               <option value="2">2</option>
@@ -83,15 +63,14 @@
               <option value="5">5</option>
             </select>
           </label>
-
           <label>
-            Комментарии
+            Комментарій
             <textarea name="comments"></textarea>
           </label>
 
         </fieldset>
  
-        <input class="btn btn-default" type="submit" name="submit" value="Заказать">
+        <input class="btn btn-default" type="submit" name="submit" value="Відправити">
  
       </form>
 
@@ -99,17 +78,16 @@
 </section>
     
   <footer class="primary-footer container group">
-    <small>&copy; Styles Conference</small>
+    <small>&copy; Crypto Caffee</small>
     <nav class="nav">
       <ul>
-        <li><a href="index.html">Главная</a></li><!--
-        --><li><a href="speakers.html">Спикеры</a></li><!--
-        --><li><a href="schedule.html">Расписание</a></li><!--
-        --><li><a href="venue.html">Место проведения</a></li><!--
-        --><li><a href="register.html">Регистрация</a></li>
+        <li><a href="index.html">Головна</a></li><!--
+        --><li><a href="speakers.html">Власники</a></li><!--
+        --><li><a href="schedule.html">Меню</a></li><!--
+        --><li><a href="venue.html">Місце розташування</a></li><!--
+        --><li><a href="register.html">Відгуки</a></li>
       </ul>
 	</nav>
   </footer>
-	 
 </body>
 </html>
