--- a/speakers.html
+++ b/speakers.html
@@ -26,7 +26,7 @@
     --><li><a href="speakers.html">Власники</a></li><!--
     --><li><a href="schedule.html">Меню</a></li><!--
     --><li><a href="venue.html">Місце розташування</a></li><!--
-    --><li><a href="register.html">Онлайн замовлення</a></li>
+    --><li><a href="register.html">Відгуки</a></li>
   </ul>
     </header> 
 
@@ -124,7 +124,7 @@
         --><li><a href="speakers.html">Власники</a></li><!--
         --><li><a href="schedule.html">Меню</a></li><!--
         --><li><a href="venue.html">Місце розташування</a></li><!--
-        --><li><a href="register.html">Онлайн замовлення</a></li>
+        --><li><a href="register.html">Відгуки</a></li>
       </ul>
       </nav>
     </footer>
