--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Crypto Coffee</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,300,100&subset=cyrillic,latin">
+  <link rel="shortcut icon" href="/assets/images/telephone.ico" type="image/x-icon">
 </head>
 <body>
 
