--- a/register.html
+++ b/register.html
@@ -78,7 +78,7 @@
 </section>
     
   <footer class="primary-footer container group">
-    <small>&copy; Crypto Caffee</small>
+    <small>&copy; Crypto Coffee</small>
     <nav class="nav">
       <ul>
         <li><a href="index.html">Головна</a></li><!--
