--- a/venue.html
+++ b/venue.html
@@ -53,7 +53,7 @@
     </section>  
   
   <footer class="primary-footer container group">
-    <small>&copy; Crypto Caffee</small>
+    <small>&copy; Crypto Coffee</small>
     <nav class="nav">
        <ul>
         <li><a href="index.html">Головна</a></li><!--
