--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="row">
 	  <div class="grid">
 
-        <!-- Спикеры -->
+        <!-- Власники -->
 
         <section class="teaser col-1-3">
           <h5>Власники</h5>
@@ -47,7 +47,7 @@
           <p>Хлопці вже не перший рік в кавовому бізнесі, і повністю знають свою роботу</p>
         </section><!--
 
-        Расписание
+        Меню
 
         --><section class="teaser col-1-3">
           <h5>Меню</h5>
@@ -58,7 +58,7 @@
           <p>Щоразу, коли ви насолоджуєтеся нашою кавою, ви робите чудовий вибір.</p>
         </section><!--
 
-        Место проведения
+        Місце розташування
 
         --><section class="teaser col-1-3">
           <h5>Місце розташування</h5>
