--- a/speakers.html
+++ b/speakers.html
@@ -95,7 +95,7 @@
             <h5>Про власника</h5>
 
             <p>
-              Ткаук Сергій, засновник і генеральний директор однієї з найбільших криптовалютних бірж Binance.
+              Ткачук Сергій, засновник і генеральний директор однієї з найбільших криптовалютних бірж Binance.
                Відомий у криптоспільноті як CZ. В інтерв'ю Bloomberg у квітні 2021 року Чанпен 
                сказав, що «ймовірно, у Binance, найбільше біржових ліцензій у всьому світі».
             </p>
